--- a/src/pages/Homepage/Homepage.css
+++ b/src/pages/Homepage/Homepage.css
@@ -6,6 +6,8 @@
     position: absolute;
     top: 0;
     right: 0;
+    margin-top: 0.5%;
+    margin-right: 0.5%;
 }
 
 .fullscreen-checkbox input[type = 'checkbox']:checked {
